# UASEF

./: .env.example  .gitignore  Dockerfile  README.md  README_EN.md  REPRODUCE.md  all_experiments_report_2.md  env.example  pyproject.toml  reproduce.sh  requirements.txt  run_all_round10.sh  run_all_round11.sh  run_all_round8.sh  run_all_round9.sh  run_full_evaluation.sh  run_ml4h_submission.sh  run_multiseed_evaluation.sh  run_phase0.sh  run_phase2.sh  run_r11_3_full_llm.sh  run_round11.sh  run_round12.sh
agent/: __init__.py  graph.py  nodes.py  state.py  tools.py
analysis/: consolidate.py  make_results.py  manifest.py  preflight.py  purge_invalid.py  run_provenance.py  splits.py  stats.py
data/: README.md  __init__.py  download_datasets.sh  loader.py  qa_datasets.py
experiments/: aggregate_multiseed.py  build_audit_references.py  config_utils.py  eval_medabstain.py  export_audit_csv.py  llm_judge_relabel.py  metrics_utils.py  pareto_sweep.py  phase0_gatekeeper.py  phase1_stage_a.py  phase2_answerer_drafts.py  phase2_calibration_gating.py  phase2_competence_proxy.py  phase2_cross_verifier.py  phase2_infotheory.py  phase2_qa_audit.py  phase2_selfanswer.py  phase2_shuffle_answer.py  phase2_shuffle_audit.py  phase2_shuffle_compare.py  phase2_shuffle_judge.py  phase2_shuffle_reference.py  phase2_shuffle_sanity.py  phase2_shuffle_verify.py  phase2_threshold_transfer.py  phase2_verifier_augmented.py  reproduce_round7.sh  round10_5_irb_extract.py  round10_aggregate_report.py  round10_alpha_005_empirical.py  (+59 more)
improvements/improved/round6/: pyproject.toml
improvements/improved/round6/configs/: base_config.yaml
improvements/improved/round6/experiments/: eval_medabstain.py  metrics_utils.py  pareto_sweep.py  run_agent_experiment.py  run_all_experiments.py  run_baseline_comparison.py
improvements/improved/round6/models/: rtc_ede.py
(+241 files in other folders)
