[project]
name = "uasef"
version = "0.1.0"
description = "Uncertainty-Aware Safe Escalation Framework for Medical LLM Agents"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.30.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "scipy>=1.13.0",
    "pandas>=2.2.0",
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.0",
]