[project]
name = "uasef"
version = "0.1.0"
description = "Uncertainty-Aware Safe Escalation Framework for Medical LLM Agents"
requires-python = ">=3.11"
dependencies = [
    # 기존 핵심 의존성
    "openai>=1.30.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "scipy>=1.13.0",
    "pandas>=2.2.0",
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.0",
    # LangGraph 에이전트
    "langgraph>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-core>=0.2.0",
    "langsmith>=0.1.0",
    # 데이터셋
    "datasets>=2.14.0",
]